# voxels-grinder

./: .gitignore  CMakeLists.txt  Doxyfile  Image.hpp  ImageIO.hpp  ImageUtils.cpp  ImageUtils.hpp  MAIN  README.md  main.cpp  utils.hpp
.github/workflows/: cpp-build.yml
actions-manager/: Action.hpp  ActionPathAutomata.cpp  ActionPathAutomata.hpp  ActionPathCategory.hpp  ActionsManager.cpp  ActionsManager.hpp  BaseArgument.hpp  Receiver.hpp  action_key.cpp  action_key.hpp  classifier.hpp  main.cpp  mockActions.py
architecture/: MediaManager.cpp  _visitor.cpp  operator.cpp  roadbook.md  visitor.cpp
containers/: Geometry.hpp  GeometryCanvas.cpp  GeometryCanvas.hpp  LabeledCanvas.cpp  LabeledCanvas.hpp  MaskCanvas.cpp  MaskCanvas.hpp  Mesh.hpp  PolyLine.cpp  PolyLine.hpp  Vertices.hpp  VoxelsCanvas.cpp  VoxelsCanvas.hpp  VoxelsCanvasFloat.cpp  VoxelsCanvasFloat.hpp  VoxelsCanvasTriplet.hpp  VoxelsCanvasU16.cpp  VoxelsCanvasU16.hpp  VoxelsCanvasU8.cpp  VoxelsCanvasU8.hpp  main.cpp
core/: Bucket.cpp  Bucket.hpp  Calibration.cpp  Calibration.hpp  Data.cpp  Data.hpp  DataProxy.cpp  DataProxy.hpp  Mesh.hpp  MetadataManager.cpp  MetadataManager.hpp  PolyLine.hpp  Processor.cpp  Processor.hpp  Task.cpp  Task.hpp  ThreadsPool.cpp  ThreadsPool.hpp  Vertices.cpp  Vertices.hpp  VoxelsCanvas.cpp  VoxelsCanvas.hpp  main.cpp
data-types/: Data.hpp  Image.hpp  Image.tpp  ImageTypes.hpp  Task.cpp  Task.hpp  data-types.hpp  main.cpp
doc/html/: ImageIO_8hpp_source.html  Image_8hpp_source.html  annotated.html  classImage-members.html  classImage.html  classImageIO-members.html  classImageIO.html  classImageIO__TIFF-members.html  classImageIO__TIFF.html  classImageIO__TIFF__coll__graph.dot  classImageIO__inherit__graph.dot  classImageUtils-members.html  classImageUtils.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  classImage.tex  classImageIO.tex  classImageIO.tex.tmp  classImageIO__TIFF.tex  classImageIO__TIFF__inherit__graph.dot  classImageIO__inherit__graph.dot  classImageUtils.tex  hierarchy.tex  refman.tex
examples/: test_page.cpp
facade/: IOManager.cpp  IOManager.hpp  Media.cpp  Media.hpp  MediaManager.cpp  MediaManager.hpp
io/: IOManager.cpp  IOManager.hpp  main.cpp
medias/: DataUtils.cpp  DataUtils.hpp  Dimensions.cpp  Dimensions.hpp  Media.cpp  Media.hpp  MediaData.cpp  MediaData.hpp  MediaManager.cpp  MediaManager.hpp  bit_depth.hpp  main.cpp
processors/analysis/: CanvasStatistics.cpp  CanvasStatistics.hpp  CanvasStatisticsProcessor.cpp  CanvasStatisticsProcessor.hpp  MinMaxCanvas.cpp  MinMaxCanvas.hpp
processors/binary/: ThresholdProcessor.cpp  ThresholdProcessor.hpp  ThresholdTask.cpp  ThresholdTask.hpp
processors/utils/: CanvasDimensions.cpp  CanvasDimensions.hpp  NSlices.cpp  NSlices.hpp
proxies/: CziProxy.cpp  CziProxy.hpp  ObjProxy.cpp  ObjProxy.hpp  PgmProxy.cpp  PgmProxy.hpp  TiffProxy.cpp  TiffProxy.hpp  XmlProxy.cpp  XmlProxy.hpp
stack-segments/: ID.cpp  ID.hpp  LUT_IDs.h  StackSegment.cpp  StackSegment.hpp  StackSegment.tpp  main.cpp
tasks/binary/: ThresholdTask.cpp  ThresholdTask.hpp
testing/: MAIN  filter.hpp  main.cpp
unit-tests/: actions-manager-tests.cpp  containers-tests.cpp  core-tests.cpp  main.cpp  processors-tests.cpp  stack-segment-tests.cpp
utils/: Color.cpp  Color.hpp  Logger.cpp  Logger.hpp  general.hpp  main.cpp  streams.cpp  streams.hpp
